test/files/neg/t650.scala
// test/Test2.scala
package test;
import scala.collection.mutable._;
trait Test2 extends LinkedList;
