test/files/neg/t650.check
t650.scala:4: error: missing type arguments
trait Test2 extends LinkedList;
                    ^
one error found
